class Usuario
{
private:
    /* data */
public:
    Usuario(/* args */) {}
    ~Usuario() {}
};