@startuml focos

class SerieFocos{
    -Foco focos[10]
    +Mostrarfocos()
    +EncenderFocos()
}

class Usuario

class Foco{
-EstadoFoco estado
+Encender()
+Apagar()
+LeerEstado():EstadoFoco
}

class EstadoFoco{
    EstadoFoco
}

SerieFocos "1"*--"10" Foco
Usuario o-- SerieFocos

Foco *-- EstadoFoco
Usuario o-- Foco
EstadoFoco --|> Booleano

@enduml